fixed visiblity

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -20,6 +20,13 @@ html {
   scroll-behavior: smooth;
 }
 
+.fadeIn,
+.fadeInAppear,
+.fadeInTitle {
+  opacity: 0;
+  visibility: hidden;
+}
+
 img {
   width: 100%;
   display: block;
